err/ava.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyDispatcher-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/ava'...
Listing './lib/python3.5/site-packages/ava/cmds'...
Compiling './lib/python3.5/site-packages/ava/cmds/cli.py'...
***   File "./lib/python3.5/site-packages/ava/cmds/cli.py", line 75
    os.makedirs(app_dir, 0700)
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/ava/cmds/key.py'...
***   File "./lib/python3.5/site-packages/ava/cmds/key.py", line 58
    oldmask = os.umask(077)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/ava/core'...
Listing './lib/python3.5/site-packages/ava/runtime'...
Listing './lib/python3.5/site-packages/ava/shell'...
Compiling './lib/python3.5/site-packages/ava/shell/osx.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (osx.py, line 44)
Listing './lib/python3.5/site-packages/ava/spi'...
Listing './lib/python3.5/site-packages/ava/util'...
Compiling './lib/python3.5/site-packages/ava/util/time_uuid.py'...
***   File "./lib/python3.5/site-packages/ava/util/time_uuid.py", line 90
    return (self.get_time() - 0x01b21dd213814000L) / 1e7
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ava-0.1.1515839174.egg-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/backports.ssl_match_hostname-3.5.0.1.egg-info'...
Listing './lib/python3.5/site-packages/base58-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/libnacl'...
Listing './lib/python3.5/site-packages/libnacl-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/lmdb'...
Listing './lib/python3.5/site-packages/lmdb-0.93.egg-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pod'...
Listing './lib/python3.5/site-packages/pod/conf'...
Listing './lib/python3.5/site-packages/pod/data'...
Listing './lib/python3.5/site-packages/pod/logs'...
Listing './lib/python3.5/site-packages/pod/mods'...
Listing './lib/python3.5/site-packages/pod/mods/commands'...
Listing './lib/python3.5/site-packages/pod/mods/tasks'...
Listing './lib/python3.5/site-packages/pod/mods/webhooks'...
Listing './lib/python3.5/site-packages/pod/pkgs'...
Listing './lib/python3.5/site-packages/pod/webroot'...
Listing './lib/python3.5/site-packages/pydispatch'...
Listing './lib/python3.5/site-packages/pyscrypt'...
Listing './lib/python3.5/site-packages/pyscrypt-1.6.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/res'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/ujson-1.35.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/ws4py'...
Listing './lib/python3.5/site-packages/ws4py/client'...
Listing './lib/python3.5/site-packages/ws4py/server'...
Listing './lib/python3.5/site-packages/ws4py-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/wsaccel'...
Listing './lib/python3.5/site-packages/wsaccel-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
